2000-06-08  Chema Celorio  <chema@celorio.com>

	* dialogs/prefs.glade: typo

2000-06-08  Chema Celorio  <chema@celorio.com>

	* search.c (gedit_search_replace_all_execute): fix an ugly
	crash.

2000-06-06  Roberto Majadas  <phoenix@nova.es>
 
 	* file.c (gedit_file_stdin): fix the pipe constant problem  

2000-06-06  Chema Celorio  <chema@celorio.com>

	* search.h: add last_text_searched to the structure and start_pos parameter
	to find again.

	* dialogs/dialog-replace.c (replace_text_clicked_cb): save the last text
	searched for find again.

	* menus.c (gedit_edit_menu): add FIND_AGAIN menu entry

	* file.c (gedit_shutdown): move this function here.

	* gedit.h (gedit_shutdown): delete and remove from repository

2000-06-05  Chema Celorio  <chema@celorio.com>

	* gedit.h (gedit_shutdown): remove structure from here.

	* search.h: added new prototype
	* search.c (search_text_not_found_notify): move here
	(find_again_execute): implement

2000-06-05  Chema Celorio  <chema@celorio.com>

	* search.c (gedit_search_replace_all_execute): done.

	* dialogs/dialog-replace.c (replace_text_clicked_cb): call replace all.
	and display dialog.

2000-06-05  Chema Celorio  <chema@celorio.com>

	* document.c (gedit_document_get_tab_name): added comments

2000-06-05  Chema Celorio  <chema@celorio.com>

	* dialogs/dialog-replace.c (replace_text_clicked_cb): start
	replace all stuff

	* search.c (gedit_search_replace_all_execute): start implementing

	* prefs.c: new pref print_orientation
	* dialogs/dialog-prefs.c: ditto

	* print.c : implement orientation. 

	* view.h (struct _View): clean the struct and optimize it.

	* menus.c (view_menu): call the new functions

2000-06-05  Chema Celorio  <chema@celorio.com>

	* file.c (gedit_file_create_popup): rename

	* document.c (gedit_get_document_tab_name): rewrite.

2000-06-04  Chema Celorio  <chema@celorio.com>

	* document.h (struct _Document): clean the structure.

2000-06-04  Chema Celorio  <chema@celorio.com>
