@@ -1,5 +1,14 @@
 2000-06-08  Chema Celorio  <chema@celorio.com>
 
+	* file.c (gedit_file_stdin): use new function to set
+	the position in the view.
+
+	* view.c (views_delete): make static.
+	(views_insert): make static
+	Use new functions to insert into the documents
+
+	* plugin.h: add prototype to kill warning
+
 	* dialogs/prefs.glade: typo
 
 2000-06-08  Chema Celorio  <chema@celorio.com>
